# RIS_icequakes

./: .gitignore  README.md  data_download.ipynb  detect.ipynb  main.py  pyproject.toml
association/: assoc.py  envelope.py
detection/: envelope.py  iterator.py  stalta.py
download/: bulk_dl.py  otf.py  sta_inv.py
ris_icequakes/: __init__.py
ris_icequakes/association/: __init__.py  assoc.py  envelope.py
ris_icequakes/detection/: iterator.py  stalta.py
ris_icequakes/download/: bulk_dl.py  otf.py  sta_inv.py
ris_icequakes/location/: __init__.py  locator_rayleigh.py
